fixed image z-index on about page

--- a/app/assets/stylesheets/about.scss
+++ b/app/assets/stylesheets/about.scss
@@ -1,6 +1,7 @@
 #infoWrapper {
 	text-align: center;
 	img {
+		z-index: -1;
 		position: relative;
 		top: 100px;
 		padding: 20px;
