--- a/app/assets/stylesheets/dashboards/show.scss
+++ b/app/assets/stylesheets/dashboards/show.scss
@@ -65,7 +65,11 @@ nav a.navLink {
 }
 
 .meals {
-  padding-top: 75px;
+  padding-top: 50px;
+  p {
+  text-align: center;
+  font-size: 2em;
+}
 }
 
 .dashboard {
